--- a/Sln.AdapterPattern/AdapterPattern/AdapterPattern.csproj
+++ b/Sln.AdapterPattern/AdapterPattern/AdapterPattern.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Notes\Adapter Design Pattern %28C#%29.pdf" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Notes\AdapterPattern.jpg" />
